--- a/productlist.html
+++ b/productlist.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css"> <!-- länk för att importera den egna css filen  -->
   </head>
   <body>
-    <header class="p-2">
+    <header>
       <!-- Header med navigationsmeny och jumbotron, padding med Bootstrap. Denna är samma navbar för alla sidor på hemsidan-->
       <nav class="navbar navbar-expand-md p-4 rounded"><!-- Navigationsmeny med Bootstrap, mycket padding och rundade hörn -->
         <div class="container"> <!-- Länk till startsidan med logotyp och företagsnamn -->
@@ -54,11 +54,13 @@
     </header>
     <!--Här börjar huvudinnehållet som är specifikt för varje sida-->
     <main>
-      <section class="jumbotroncontainer" style="background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0)), url(images/product-background.jpg);">
-        <div class="container text-center py-5">
-          <h2 class="display-4 text-white">Upptäck våra destinationer</h2>
-          <br>
-          <h3 class="text-white fw-semibold">Från soliga stränder till spännande äventyr - vi har något för hela familjen!</h3>
+      <section>
+        <div class="jumbotroncontainer" style="background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0)), url(images/product-background.jpg);">
+          <div class="container text-center py-5">
+            <h2 class="display-4 text-white">Upptäck våra destinationer</h2>
+            <br>
+            <h3 class="text-white fw-semibold">Från soliga stränder till spännande äventyr - vi har något för hela familjen!</h3>
+          </div>
         </div>
       </section>
       <section>
