--- a/basket.html
+++ b/basket.html
@@ -24,7 +24,7 @@
             <!-- titeln, är en flexbox, vertikalt centrerad och har varierbar storlek-->
             <img src="images/logo.png" alt="Sol & Semester AB Logo, ett rött och vitt parasoll i sanden" class="d-inline-block me-4"> <!-- loggan är inline, med lite marginal till titlen -->
             <!-- loggan är inline, med alignad text -->
-            Sol & Semester AB
+            <h1>Sol & Semester AB</h1>
           </a>
 
           <!-- navigationsmenyn i navbaren-->
