--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="navbar-brand d-flex align-items-center fs-1 fs-md-3 fs-lg-3" href="index.html" style="color: #155fa0; font-weight: 800;"> <!-- titeln, är en flexbox, vertikalt centrerad och har varierbar storlek-->
             <img src="images/logo.png" alt="Sol & Semester AB Logo, ett rött och vitt parasoll i sanden" class="d-inline-block me-4"> <!-- loggan är inline, med lite marginal till titlen -->
             <!-- loggan är inline, med alignad text -->
-            Sol & Semester AB
+            <h1>Sol & Semester AB</h1>
           </a>
 
           <!-- navigationsmenyn i navbaren-->
@@ -89,7 +89,7 @@
                 <div class="card h-100">
                   <img src="images/destinations/prague.jpg" class="card-img-top" alt="En gammal kyrka och ett astronomiskt ur i Prag">
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
-                    <h4 class="card-title">Prag</h4>
+                    <h3 class="card-title">Prag</h3>
                     <p class="card-text">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna</p>
                     <br>
                     <p><b>Nedsatt pris!</b> Från endast 5 500:-</p>
@@ -102,7 +102,7 @@
                 <div class="card h-100"> <!-- höjd för att göra korten lika höga -->
                   <img src="images/destinations/crete.jpg" class="card-img-top" alt="Fyren som står vid ingången till staden Chanias hamn på Kreta">
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
-                    <h4 class="card-title">Kreta</h4>
+                    <h3 class="card-title">Kreta</h3>
                     <p class="card-text">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
                     <br>
                     <p><b>Nedsatt pris!</b> Från endast 10 500:-</p>
@@ -115,7 +115,7 @@
                 <div class="card h-100">
                   <img src="images/destinations/borabora.jpg" class="card-img-top" alt="En bro i trä leder ut till ett hus med vasstak ute i det tropiskt blå havet">
                   <div class="card-body d-flex flex-column">
-                    <h4 class="card-title">Bora Bora</h4>
+                    <h3 class="card-title">Bora Bora</h3>
                     <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en härlig och minnesvärd familjesemester</p>
                     <br>
                     <p><b>Nedsatt pris!</b> Från endast 16 900:-</p>
