--- a/paymentpage.html
+++ b/paymentpage.html
@@ -21,7 +21,7 @@
           <a class="navbar-brand d-flex align-items-center fs-1 fs-md-3 fs-lg-3" href="index.html" style="color: #155fa0; font-weight: 800;"> <!-- titeln, är en flexbox, vertikalt centrerad och har varierbar storlek-->
             <img src="images/logo.png" alt="Sol & Semester AB Logo, ett rött och vitt parasoll i sanden" class="d-inline-block me-4"> <!-- loggan är inline, med lite marginal till titlen -->
             <!-- loggan är inline, med alignad text -->
-            Sol & Semester AB
+            <h1>Sol & Semester AB</h1>
           </a>
   
             <!-- navigationsmenyn i navbaren-->
