--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="productlist.html">Produkter</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link active"
                   href="contact.html"
                   aria-current="page"
                   ><u>Kontakt</u></a
