--- a/feedbackpage.html
+++ b/feedbackpage.html
@@ -80,7 +80,7 @@
       </nav>
     </header>
     <main>
-      <div class="text-center" style="margin: 70px;"> <!-- centrerar texten och ger lite marginal -->
+      <div class="text-center py-5" style="margin: 70px;"> <!-- centrerar texten och ger lite marginal -->
           <h2>Tack för ditt meddelande!</h2>
           <p>Vi har tagit emot ditt meddelande och återkommer till dig så snart vi kan.</p>
           <a href="index.html" class="btn btn-primary mt-3">Tillbaka till startsidan</a> <!-- knapp för att gå tillbaka till startsidan -->
