--- a/contact.html
+++ b/contact.html
@@ -136,6 +136,15 @@
             >
           </div>
           <div class="mb-3">
+            <label for="subject" class="form-label">Ämne</label>
+            <input
+              type="text"
+              class="form-control"
+              id="subject"
+              placeholder="Ditt ämne"
+            >
+          </div>
+          <div class="mb-3">
             <label for="message" class="form-label">Meddelande</label>
             <textarea
               class="form-control"
