--- a/basket.html
+++ b/basket.html
@@ -59,9 +59,8 @@
     <main>
       <section> <!-- wrapper-element för att gruppera jumbotronen -->
         <div class="jumbotroncontainer" style="background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0)), url(images/basket-background.jpg);"> <!-- byter bakgrundsbild och en gradient för att göra texten mer läsbar -->
-          <div class="container text-center py-5">
-            <h2 class="display-4 text-white">Din Varukorg</h2> <!-- rubriken för sidan, stor text -->
-            <br>
+          <div class="container text-center py-5"> <!-- centrerar texten i jumbotronen, py-5 ger padding på y-axeln -->
+            <h2 class="display-4 text-white mb-5">Din Varukorg</h2> <!-- rubriken för sidan, stor text -->
             <h3 class="text-white fw-semibold">Här kan du hantera alla dina bokningar</h3>
           </div>
         </div>
@@ -81,14 +80,14 @@
 
               <p><b>Datum:</b> 12 juli - 19 juli 2025 (7 nätter)</p>
 
-              <p><b>Flyg:</b><br>
-                Tur: Arlanda (ARN) → Chania (CHQ), 08:30 - 13:00<br>
-                Retur: Chania (CHQ) → Arlanda (ARN), 14:30 - 18:00<br>
+              <p><b>Flyg:</b>
+                Tur: Arlanda (ARN) → Chania (CHQ), 08:30 - 13:00
+                Retur: Chania (CHQ) → Arlanda (ARN), 14:30 - 18:00
                 Flygbolag: Mediterranean Sky Airlines
               </p>
 
-              <p><b>Boende:</b><br>
-                Hotel Sol Chania, Dubbelrum med balkong & havsutsikt<br>
+              <p><b>Boende:</b>
+                Hotel Sol Chania, Dubbelrum med balkong & havsutsikt
                 Inkluderar frukostbuffé, tillgång till pool och gym
               </p>
 
@@ -96,10 +95,10 @@
 
               <hr>
 
-              <p><b>Pris per vuxen:</b> 11 500 kr<br>
-              <b>Pris per barn:</b> 9 000 kr<br>
+              <p><b>Pris per vuxen:</b> 11 500 kr
+              <b>Pris per barn:</b> 9 000 kr
               <b>Totalt: 32 000 kr</b></p>
-              <br>
+            
 
               <div class="d-flex justify-content-between"> <!-- Flexbox för att placera knapparna på varsin sida -->
                 <a href="#" class="btn btn-primary">Ta bort resa</a>
