--- a/feedbackpage.html
+++ b/feedbackpage.html
@@ -80,14 +80,14 @@
       </nav>
     </header>
     <main>
-      <div class="text-center py-5" style="margin: 70px;"> <!-- centrerar texten och ger lite marginal -->
-          <h2>Tack för ditt meddelande!</h2>
+      <div class="text-center py-5" style="margin: 70px;"> <!-- centrerar texten och ger lite marginal och padding -->
+          <h2>Tack för ditt meddelande!</h2> 
           <p>Vi har tagit emot ditt meddelande och återkommer till dig så snart vi kan.</p>
           <a href="index.html" class="btn btn-primary mt-3">Tillbaka till startsidan</a> <!-- knapp för att gå tillbaka till startsidan -->
         </div>
     </main>
     <footer> <!-- Footer med kontaktinformation, sociala medier och supporttider -->
-      <div class="footer-container">
+      <div class="footer-container"> <!-- wrapper för footern -->
         <div class="footer-section"> <!-- kontaktinformation -->
           <h3>Kontakta oss</h3>
           <p>Sol & Semester AB</p>
