--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         <div class="jumbotroncontainer"> <!-- Jumbotronsektion för att välkomna besökare, bootstrap mall  -->
           <div class="container text-center py-5"> <!-- container för att centrera texten och ge padding -->
             <h2 class="display-4 text-white">Välkommen till Sol & Semester AB!</h2> <!-- stor rubrik för att välkomna besökare -->
-            <h3 class="lead text-white fw-semibold">Din drömsemester börjar här</h3> 
-            <br>
+            <h3 class="lead text-white fw-semibold mb-5">Din drömsemester börjar här</h3> 
             <h3 class="text-white fw-semibold">Utforska våra fantastiska resor och erbjudanden</h3>
             <a class="btn btn-lg btn-light m-3" href="productlist.html" role="button">Boka redan nu!</a> <!-- call to action knapp för att komma till destinationer-->
           </div>
@@ -67,12 +66,10 @@
       </section>
       <section> <!-- Sektion för att presentera företaget -->
         <div>
-          <h2 class="mb-4">Planera din drömsemester hos oss!</h2>
-          <p>Vi är stolta över att erbjuda en plattform där du kan hitta de bästa resorna för hela familjen. Oavsett om du letar efter en avkopplande strandsemester, en spännande skidresa eller en kulturell storstadsweekend, har vi något för dig.</p>
-          <br>
-          <p>På Sol & Semester AB hjälper vi familjer att hitta glädjen i vardagen genom resor som passar alla - stora som små. Vi tror att kvalitetstid inte behöver vara komplicerad. En solig strand, ett skratt i skidbacken eller en ny stad att upptäcka tillsammans kan förvandla en vanlig vecka till något oförglömligt.</p>
-          <br>
-          <p>Med hjärtat i familjelivets tempo och örat mot era behov har vi skapat en reseplattform där ni kan drömma, planera och boka tryggt. Oavsett om ni längtar efter en aktiv semester, lugn avkoppling eller något däremellan - vi hjälper er hitta rätt.</p>
+          <h2 class="mb-4">Planera din drömsemester hos oss!</h2> <!-- stor marginal bottom -->
+          <p class="mb-4">Vi är stolta över att erbjuda en plattform där du kan hitta de bästa resorna för hela familjen. Oavsett om du letar efter en avkopplande strandsemester, en spännande skidresa eller en kulturell storstadsweekend, har vi något för dig.</p>
+          <p class="mb-4"></p>På Sol & Semester AB hjälper vi familjer att hitta glädjen i vardagen genom resor som passar alla - stora som små. Vi tror att kvalitetstid inte behöver vara komplicerad. En solig strand, ett skratt i skidbacken eller en ny stad att upptäcka tillsammans kan förvandla en vanlig vecka till något oförglömligt.</p>
+          <p class="mb-4"></p>Med hjärtat i familjelivets tempo och örat mot era behov har vi skapat en reseplattform där ni kan drömma, planera och boka tryggt. Oavsett om ni längtar efter en aktiv semester, lugn avkoppling eller något däremellan - vi hjälper er hitta rätt.</p>
         </div>
       </section>
 
@@ -80,18 +77,17 @@
 
       <section> <!-- Sektion för att visa upp utvalda produkter -->
         <div class="container">
-          <h2 class="mb-4">Våra utvalda resmål</h2> 
+          <h2 class="mb-4">Våra utvalda resmål</h2> <!-- stor marginal bottom -->
           <p class="mb-5">Vår utvalda destinationer är noga handplockade för att erbjuda dig fantastiska upplevelser till kanonpris. Ta chansen att fynda bland våra bästa erbjudanden och boka din nästa drömresa idag!</p>
 
           <article> <!-- article som innehåller kort för varje destination, article för att kunna exportera eller visa erbjudandena någon annanstans -->
             <div class="row"> <!-- följde bootstrapmall för cards -->
               <div class="col-md-4 mb-4">
-                <div class="card h-100">
+                <div class="card h-100"><!-- höjd för att göra korten lika höga -->
                   <img src="images/destinations/prague.jpg" class="card-img-top" alt="En gammal kyrka och ett astronomiskt ur i Prag">
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
                     <h3 class="card-title">Prag</h3>
-                    <p class="card-text">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna</p>
-                    <br>
+                    <p class="card-text mb-4">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna</p>
                     <p><b>Nedsatt pris!</b> Från endast 5 500:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
@@ -103,8 +99,7 @@
                   <img src="images/destinations/crete.jpg" class="card-img-top" alt="Fyren som står vid ingången till staden Chanias hamn på Kreta">
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
                     <h3 class="card-title">Kreta</h3>
-                    <p class="card-text">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
-                    <br>
+                    <p class="card-text mb-4">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
                     <p><b>Nedsatt pris!</b> Från endast 10 500:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
@@ -116,8 +111,7 @@
                   <img src="images/destinations/borabora.jpg" class="card-img-top" alt="En bro i trä leder ut till ett hus med vasstak ute i det tropiskt blå havet">
                   <div class="card-body d-flex flex-column">
                     <h3 class="card-title">Bora Bora</h3>
-                    <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en härlig och minnesvärd familjesemester</p>
-                    <br>
+                    <p class="card-text mb-4">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en härlig och minnesvärd familjesemester</p>
                     <p><b>Nedsatt pris!</b> Från endast 16 900:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
@@ -129,7 +123,7 @@
       </section>
 
       <hr>
-      <section class="py-2 my-5 mb-5"> <!-- sektion för att att kontakta -->
+      <section class="py-2 my-5"> <!-- sektion för att att kontakta, padding och marginaler i y led --> 
         <div class="mb-5">
           <div class="container">
             <h2 class="mb-3">Har du frågor eller vill du komma i kontakt med oss?</h2>
