--- a/paymentpage.html
+++ b/paymentpage.html
@@ -56,13 +56,12 @@
       <section> <!-- Här börjar huvudinnehållet som är specifikt för varje sida -->
         <div class="container my-5">
             <h2>Betalning</h2> <!--ett kort forumlär med betalningsuppgifter -->
-            <p>Här kan du fylla i dina betalningsuppgifter för att slutföra köpet.</p>
-            <br>
+            <p class="mb-4"></p>>Här kan du fylla i dina betalningsuppgifter för att slutföra köpet.</p>
             <section class="contactform">
                 <h3>Betalningsinformation</h3>
                 <form action="paymentconfirmation.html" method="get"> <!-- Formuläret som skickar en till betalningsbekräftelse-sidan när det är ifyllt -->
                     <div class="mb-3">
-                      <label for="cardNumber" class="form-label">Kortnummer</label>
+                      <label for="cardNumber" class="form-label">Kortnummer</label> 
                       <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456" required />
                     </div>
                     <div class="mb-3">
