--- a/basket.html
+++ b/basket.html
@@ -95,9 +95,9 @@
 
               <hr>
 
-              <p><b>Pris per vuxen:</b> 11 500 kr
-              <b>Pris per barn:</b> 9 000 kr
-              <b>Totalt: 32 000 kr</b></p>
+              <p><b>Pris per vuxen:</b> 11 500 kr</p>
+              <p><b>Pris per barn:</b> 9 000 kr</p>
+              <p class="my-2"><b>Totalt: 32 000 kr</b></p>
             
 
               <div class="d-flex justify-content-between"> <!-- Flexbox för att placera knapparna på varsin sida -->
