--- a/paymentconfirmation.html
+++ b/paymentconfirmation.html
@@ -55,12 +55,12 @@
     <main>
       <section> <!-- Här börjar huvudinnehållet som är specifikt för varje sida -->
         <h2 class="text-center mb-4">Betalningsbekräftelse</h2> <!--en kort text om att betalningen är bekräftad-->
-        <div class="card"> 
+        <div class="card" style="transform: none !important; box-shadow: none !important;"> <!-- en card utan skugga och translation vid hover, ta bort effekten för att den inte ska se klickbar ut-->
             <h2>Din betalning har genomförts!</h2>
             <p class="mb-4"></p>Tack för din beställning hos Sol & Semester AB. Din betalning har mottagits och vi kommer att behandla din beställning så snart som möjligt.</p>
             <p class="mb-4"></p>Du kommer att få en bekräftelse via e-post med detaljer om din beställning och betalning. Om du inte mottar detta e-postmeddelande inom kort, vänligen kontrollera din skräppostmapp.</p>
-            <p class="mb-4">Om du har några frågor eller behöver hjälp, tveka inte att kontakta vår kundtjänst.</p>
-            <a href="index.html" class="btn" style="width: 300px; margin: 0 auto;">Tillbaka till startsidan</a> <!-- en knapp som tar en tillbaka till startsidan -->
+            <p class="mb-4 mt-4">Om du har några frågor eller behöver hjälp, tveka inte att kontakta vår kundtjänst.</p>
+            <a href="index.html" class="btn" style="width: 300px; margin: 0 auto !important;">Tillbaka till startsidan</a> <!-- en knapp som tar en tillbaka till startsidan -->
           </div> 
       </section>     
     </main>
