--- a/paymentpage.html
+++ b/paymentpage.html
@@ -56,7 +56,7 @@
       <section> <!-- Här börjar huvudinnehållet som är specifikt för varje sida -->
         <div class="container my-5">
             <h2>Betalning</h2> <!--ett kort forumlär med betalningsuppgifter -->
-            <p class="mb-4"></p>>Här kan du fylla i dina betalningsuppgifter för att slutföra köpet.</p>
+            <p class="mb-4"></p>Här kan du fylla i dina betalningsuppgifter för att slutföra köpet.</p>
             <section class="contactform">
                 <h3>Betalningsinformation</h3>
                 <form action="paymentconfirmation.html" method="get"> <!-- Formuläret som skickar en till betalningsbekräftelse-sidan när det är ifyllt -->
@@ -72,7 +72,7 @@
                       <label for="cvc" class="form-label">CVC</label>
                       <input type="text" class="form-control" id="cvc" placeholder="123" required />
                     </div>
-                    <h3>Att betala: 32 000 kr</h3>
+                    <h3 class="ms-1">Att betala: 32 000 kr</h3>
                     <button type="submit" class="btn">Slutför betalning</button>
                   </form>
             </section>
